# doscienario

./: .gitignore  README.md  SECURITY.md  TODO.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  webpack.config.js
.github/workflows/: artifact-publish.yml  docker-publish.yml  electron-builder.yml  github-pages.yml  tauri-builder.yml
.zed/: settings.json
docker/: Dockerfile  nginx.conf
e2e/src/: app.e2e-spec.ts
electron/: main.ts  preload.ts  updater.ts
src/: index.html  main.ts  polyfills.ts  splashscreen.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: blueprints.rs  main.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.worker.ts  configs.ts
src/app/decorators/: data-updater.decorator.ts  database-column.decorator.ts  subscribe-event.decorator.ts
src/app/guards/: auth.guard.ts  no-auth.guard.ts  project.guard.ts
src/app/interceptors/: date.interceptor.ts  grpc-logger.interceptor.ts  grpc.interceptor.ts
src/app/models/: default.model.ts  document-types.enum.ts  tab-element.model.ts  tag.model.ts
src/app/services/: api.service.ts  blueprint.service.ts  document-worker.service.ts  electron.service.ts  progress.service.ts  project.service.ts  socket.service.ts  (+4 more)
src/environments/: environment.int.ts  environment.prod.ts  environment.ts
src/lib/: ckeditor.js  ckeditor.js.map
src/proto/: docs.pb.ts  docs.pbconf.ts  docs.pbsc.ts
src/types/: global.d.ts
(+267 files in other folders)
