[package]
name = "app"
version = "2.1.1"
description = "Doscenario application"
authors = ["Théodore Prévot"]
license = ""
repository = "https://github.com/totodore/doscienario"
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.3", features = ["api-all", "updater"] }
r3bl_rs_utils = "0.9.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol", "devtools" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
devtools = [ "tauri/devtools" ]
